<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/cal_type"
        android:checkableBehavior="single">
        <item
            android:id="@+id/subtitle"
            android:title="@string/cal_type">
            <menu>
                <item
                    android:id="@+id/it_monthly"
                    android:icon="@drawable/ic_cal_view_month"
                    android:title="@string/cal_type_monthly" />
                <item
                    android:id="@+id/it_weekly"
                    android:icon="@drawable/ic_cal_view_week"
                    android:title="@string/cal_type_weekly" />

            </menu>
        </item>
    </group>
    <group
        android:id="@+id/copyright"
        android:checkableBehavior="single">
        <item android:title="@string/copyright" />
    </group>
</menu>