<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".activities.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/purple"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white_500"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/ivReturn"
                        style="@style/btn_circle"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginRight="16dp"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:src="@drawable/ic_action_back" />

                    <TextView
                        android:id="@+id/txtAppBarTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Create an event"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilTitle"
                        style="@style/til_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title"
                        android:textColorHint="@color/white"
                        app:boxBackgroundColor="@color/purple">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="100">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="25"
                                android:text="@string/from"
                                android:textColor="@color/white" />

                            <Button
                                android:id="@+id/btnBeginDate"
                                style="@style/ButtonDateTime"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="50"
                                android:text="Date" />

                            <Space
                                android:layout_width="16dp"
                                android:layout_height="match_parent" />

                            <Button
                                android:id="@+id/btnBeginTime"
                                style="@style/ButtonDateTime"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="25"
                                android:text="Time" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="100">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="25"
                                android:text="@string/to"
                                android:textColor="@color/white" />

                            <Button
                                android:id="@+id/btnEndDate"
                                style="@style/ButtonDateTime"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="50"
                                android:text="Date" />

                            <Space
                                android:layout_width="16dp"
                                android:layout_height="match_parent" />

                            <Button
                                android:id="@+id/btnEndTime"
                                style="@style/ButtonDateTime"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="25"
                                android:text="Time" />

                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_white_shape"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/bg_icon_scroll_up" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLocation"
                style="@style/til_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                app:startIconDrawable="@drawable/ic_input_location">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilColor"
                style="@style/til_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/color"
                app:startIconDrawable="@drawable/ic_input_color">

                <AutoCompleteTextView
                    android:id="@+id/acColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAttendees"
                style="@style/til_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/attendees"
                app:startIconDrawable="@drawable/ic_input_attendees">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDescription"
                style="@style/til_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                app:startIconDrawable="@drawable/ic_input_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDelete"
            style="@style/ButtonDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete" />

        <Button
            android:id="@+id/btnSubmit"
            style="@style/ButtonDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>