<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/purple"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:toolbarId="@+id/toolbar">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white_500"
                        android:padding="16dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/ivOpenNav"
                                style="@style/btn_circle"
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:layout_marginRight="16dp"
                                android:background="?android:attr/selectableItemBackgroundBorderless"
                                android:src="@drawable/ic_action_menu" />

                            <TextView
                                android:id="@+id/txtAppBarTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/app_name"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/ivCalendarToday"
                            style="@style/btn_circle"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_alignParentRight="true"
                            android:background="?android:attr/selectableItemBackgroundBorderless"
                            android:src="@drawable/ic_action_calendar_today" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp">

                        <ImageButton
                            android:id="@+id/btnPrevious"
                            style="@style/btn_circle"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_alignParentLeft="true"
                            android:layout_marginLeft="32dp"
                            android:background="?android:attr/selectableItemBackgroundBorderless"
                            android:src="@drawable/ic_action_arrow_left" />

                        <TextView
                            android:id="@+id/txtMonthYear"
                            style="@style/main_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center_vertical" />

                        <ImageButton
                            android:id="@+id/btnNext"
                            style="@style/btn_circle"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="32dp"
                            android:background="?android:attr/selectableItemBackgroundBorderless"
                            android:src="@drawable/ic_action_arrow_right" />
                    </RelativeLayout>


                    <LinearLayout
                        android:id="@+id/layoutCalendar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="32dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:background="@color/white_500"
                            android:orientation="horizontal"
                            android:paddingLeft="32dp"
                            android:paddingTop="16dp"
                            android:paddingRight="32dp"
                            android:paddingBottom="16dp">

                            <TextView
                                style="@style/calendar_weekday"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/sunday"
                                android:textColor="@color/pink" />

                            <TextView
                                style="@style/calendar_weekday"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/monday" />

                            <TextView
                                style="@style/calendar_weekday"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/tuesday" />

                            <TextView
                                style="@style/calendar_weekday"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/wednesday" />

                            <TextView
                                style="@style/calendar_weekday"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/thursday" />

                            <TextView
                                style="@style/calendar_weekday"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/friday" />

                            <TextView
                                style="@style/calendar_weekday"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/saturday" />
                        </LinearLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvDates"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="32dp"
                            android:layout_marginRight="32dp"
                            android:nestedScrollingEnabled="true" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_white_shape"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/bg_icon_scroll_up" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/upcoming_events"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvEvents"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:nestedScrollingEnabled="true" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_action_add"
            app:backgroundTint="@color/pink"
            app:tint="@color/white" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/bg_nav_drawer"
        app:headerLayout="@layout/header_navigation_drawer"
        app:menu="@menu/menu_nav_drawer" />
</androidx.drawerlayout.widget.DrawerLayout>